--- a/solution/styles/styles.css
+++ b/solution/styles/styles.css
@@ -50,3 +50,32 @@ input[type="text"] {
     transform: rotate(360deg);
   }
 }
+
+table{
+  width:100%;
+  border:1px solid #ccc;
+}
+
+td{
+  padding:10px;
+  font-size:1.4rem;
+}
+
+tr button{
+  color:red;
+}
+
+tr:nth-child(even){
+  background-color:#ccc;
+}
+
+tr:nth-child(even) button{
+  background-color:#fff;
+}
+
+.form-group button{
+  margin-left:10px;
+}
+.label{
+  padding:10px;
+}
