text changes again

--- a/solution/styles/styles.css
+++ b/solution/styles/styles.css
@@ -50,7 +50,7 @@ input[type="text"] {
     transform: rotate(360deg);
   }
 }
-
+/*
 table{
   width:100%;
   border:1px solid #ccc;
@@ -62,15 +62,23 @@ td{
 }
 
 tr button{
+  border:0;
   color:red;
+  border-radius:50%;
 }
 
 tr:nth-child(even){
   background-color:#ccc;
-}
+}*/
 
+/*
 tr:nth-child(even) button{
   background-color:#fff;
+}*/
+
+td button{
+  color:darkred;
+  font-size:40px;
 }
 
 .form-group button{
